--- a/example.yaml
+++ b/example.yaml
@@ -7,7 +7,7 @@ esp32:
   framework:
     type: esp-idf
     # Uncomment below for ESP32-C3 if you have unexpected reboots when encrypting data
-    # sdkconfig_options:
+    # sdkconfig_options:l
       # CONFIG_BOOTLOADER_WDT_TIME_MS: "60000"
   
 # Enable logging
@@ -174,6 +174,20 @@ text_sensor:
       name: "Low Battery"
     lock_ble_state:
       name: "Lock BLE State"
+      id: lock_ble_state
+      on_value:
+        then:
+          - if:
+              condition:
+                and:
+                  - wifi.connected
+                  - not:
+                      text_sensor.state:
+                        id: lock_ble_state
+                        state: 'ESTABLISHED'
+              then: 
+                - esp32_ble_tracker.start_scan:
+                    continuous: true
     user_id:
       name: "User ID"
     user_key:
